--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/calendar-range.svg" />
+    <link rel="icon" type="image/svg+xml" href="/calendar-range.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TimelyGator</title>
   </head>
